--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,32 @@ body { font-family: serif;
 	//height: 1em;
 }
 
+.tab_bar_div {
+    width: 100%;
+    height: 1em;
+    /*border: 1px solid gray;*/
+    float:left;
+    margin-left: 2em;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
+.tab_bar_div_child {
+    width: 10em;
+    height: 1em;
+    text-align: center;
+    border: 1px solid gray;
+    display: block;
+}
+
+.left {
+    float:left;
+}
+
+.right {
+    float:right;    
+}
+
 textarea[class="main-message-area"]{
 	width: 35em;
 	height: 25em;
