--- a/v3/css/machines.css
+++ b/v3/css/machines.css
@@ -1,5 +1,8 @@
-body { font-family: serif; 
-	font: normal 1em Verdana;
+body { 
+	font-family: serif; 
+	font: normal 10pt Verdana;
+	//font: normal 10pt Arial;
+	//font-family: sans-serif;
 }
 
 /* Invisible Container */
@@ -8,10 +11,10 @@ body { font-family: serif;
 }
 
 div,table,tr,td{
-	/*border: 1px solid black;*/
+	//border: 1px solid black;
 }
 
-.pmm-collection .pmm{
+.collection .pmm{
 	border: 1px solid black;
 }
 
@@ -37,11 +40,16 @@ div,table,tr,td{
 	width: auto;
 	//float:left;
 }
+
+.pmm-title{
+	margin-bottom: 5px;
+}
 .pmm-title:hover{
 	//background: linear-gradient(white, lightgray);
 	//text-transform:uppercase;
 	text-decoration:underline;
 	font-weight:bold;
+	margin-bottom: 5px;
 
 }
 
@@ -56,7 +64,7 @@ div,table,tr,td{
 
 .pmm-item-id, .pmm-item-name, .pmm-item-count, .pmm-item-auto-build{
 	display: table-cell;
-	border: 1px solid gray;
+	//border: 1px solid gray;
 	padding: 1px;
 }
 
