--- a/v4/css/machines.css
+++ b/v4/css/machines.css
@@ -5,10 +5,7 @@ body {
 	//font-family: sans-serif;
 }
 
-/* Invisible Container */
-[data-visible="false"]{
-  display: none;
-}
+
 
 div,table,tr,td{
 	//border: 1px solid black;
@@ -21,11 +18,17 @@ div,table,tr,td{
 }
 
 .pmm-container {
-	width: 45%;
+	min-width: 25em;
+	//height: 15em;
+	min-height: 10em;
 	border: 1px solid black;
 	border-radius: 5px 5px 5px 5px; /* top-left, top-right, bottom-right, bottom-left */
 	padding-left: 1em;
+	padding-bottom: 5px;
 	margin-bottom: 10px;
+	margin-right: 10px;
+
+    display: inline-block;
 }
 
 .pmm-container:hover {	
@@ -76,4 +79,10 @@ div,table,tr,td{
 
 .pmm-item-auto-build{
 	width: 1em;
+}
+
+
+/* Invisible Container */
+[data-visible="false"]{
+  display: none;
 }
