--- a/v4/css/machines.css
+++ b/v4/css/machines.css
@@ -24,6 +24,7 @@ div,table,tr,td{
 	border: 1px solid black;
 	border-radius: 5px 5px 5px 5px; /* top-left, top-right, bottom-right, bottom-left */
 	padding-left: 1em;
+	padding-right: 1em;
 	padding-bottom: 5px;
 	margin-bottom: 10px;
 	margin-right: 10px;
