--- a/v5/css/machines.css
+++ b/v5/css/machines.css
@@ -19,6 +19,8 @@
 	padding-bottom: 0em;
 	margin-bottom: 0em;
 	margin-right: 1em;
+	min-width: 3em;
+	text-align: center;
 }
 
 .option_button_spacer{
@@ -43,4 +45,8 @@
 	overflow-x: scroll;
     max-height: 10em;
     min-height: 10em;
+}
+
+#footer_div, #header_div, #machines_div, #tab_bar_div{
+	border: 1px solid black;
 }
