and we are back...

--- a/v4/css/machines.css
+++ b/v4/css/machines.css
@@ -46,7 +46,7 @@ div,table,tr,td{
 	//background: linear-gradient(white, lightgray);
 	//text-transform:uppercase;
 	text-decoration:underline;
-	font-weight:bold;
+	//font-weight:bold;
 	margin-bottom: 5px;
 
 }
