--- a/v6/style.css
+++ b/v6/style.css
@@ -1,3 +1,8 @@
+/* Invisible Container */
+[data-visible="false"]{
+  display: none;
+}
+
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, san-serif;
     font-size: 1em;
