--- a/v6/style.css
+++ b/v6/style.css
@@ -14,14 +14,51 @@ h2 {
     border-bottom: 1px solid rgba(0, 0, 0, 0.25);
 }
 
+div.header {
+    font-weight: 300;
+    font-size: 1em;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.25);  
+    margin-bottom: 10px; 
+}
+
 div.panel {
+    display: table-cell;
     padding: 5px;
     border-radius: 5px;
     border: 1px solid rgba(0, 0, 0, 0.25);
     margin-bottom: 10px;
+    margin-right: 5px;
+    float:left;
+}
+
+div.res {
+     width: 9em;
+}
+
+div.machine {
+    width: 15em;
+}
+
+div.container {
+    display: table-row;
 }
 
 span.info {
     font-size: 0.75em;
     font-style: italic;
+}
+
+div.controls {
+    display: table-row;
+}
+div.button {
+    background-color: lightgray;
+    font-size: 0.75em;
+    font-weight: 100;
+    padding: 2px;
+    margin-bottom: 2px;
+}
+[disabled=true] {
+    background-color: red;
+    //display: none;
 }
