--- a/v6/style.css
+++ b/v6/style.css
@@ -52,13 +52,22 @@ div.controls {
     display: table-row;
 }
 div.button {
-    background-color: lightgray;
+    background-color: darkgray;
     font-size: 0.75em;
     font-weight: 100;
     padding: 2px;
+    padding-left: 5px;
+    padding-right: 5px;
     margin-bottom: 2px;
 }
-[disabled=true] {
-    background-color: red;
-    //display: none;
+
+div.button[data-visible="false"] {
+    display: none;
+}
+div.button[button-disabled="true"] {
+    background-color: lightgrey;
+    //text-shadow: 1px 1px black;
+    color: white;
+    font-style: italic;
+    
 }
