--- a/v6/style.css
+++ b/v6/style.css
@@ -61,6 +61,18 @@ div.button {
     margin-bottom: 2px;
 }
 
+div.upgrade {
+    font-size: 0.75em;
+    padding: 2px;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-bottom: 2px;
+    //border-radius: 5px;
+    //border: 1px solid rgba(0, 0, 0, 0.25);
+    //margin-bottom: 10px;
+    //margin-right: 5px;
+    float:left;
+}
 div.button[data-visible="false"] {
     display: none;
 }
